[package]
authors = ["AntoineMugnier <amugnier@europe.com>"]
edition = "2021"
readme = "README.md"
name = "kaori-hsm-perf-test"
version = "0.1.0"

[dependencies]
cortex-m = {version="0.7.7", features=["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
kaori_hsm = {path = "../kaori-hsm/kaori_hsm"}

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
[dependencies.stm32f1]
features = ["stm32f103"]
version = "0.15.1"

# this lets you use `cargo fix`!

[[bin]]
name = "kaori-hsm-perf-test"
test = false
bench = false

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-


[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
