[package]
authors = ["AntoineMugnier <amugnier@europe.com>"]
edition = "2021"
readme = "README.md"
name = "cortex-m-microclock"
version = "0.1.0"

[dependencies]
cortex-m = {version="0.7.7", features=["critical-section-single-core"]}
fugit = "0.3.7"

[dev-dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1 = {version ="0.15.1", features=["stm32f103"]}
cortex-m-rt = "0.7.3"
