[package]
authors = ["AntoineMugnier <amugnier@europe.com>"]
edition = "2021"
readme = "README.MD"
license = "MIT OR Apache-2.0"
name = "cortex-m-microclock"
repository = "https://github.com/AntoineMugnier/cortex-m-microclock.git"
version = "0.1.0"

categories = ['date-and-time', 'development-tools::profiling', 'embedded']
description = "A simple software clock for Cortex-M devices based on the CYCCNT hardware counter"
keywords = [
    'CYCCNT',
    'DWT',
    'cortex-m',
    'counter',
    'microseconds'
]

[dependencies]
cortex-m = {version="0.7.7", features=["critical-section-single-core"]}
fugit = "0.3.7"

[dev-dependencies]
defmt = "0.3.4"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1 = {version ="0.15.1", features=["stm32f103"]}
cortex-m-rt = "0.7.3"
